hphp/test/zend/good/ext/gd/tests/imagecolorallocate_variation4.php.skipif
<?php
if(!extension_loaded('gd')) {
    die('skip gd extension is not loaded');
}
if(!function_exists('imagecreatetruecolor')) {
    die('skip imagecreatetruecolor function is not available');
}
?>