hphp/test/zend/bad/ext/gd/tests/gd_info_error.php.skipif
<?php
if(!extension_loaded('gd')) {
    die('skip gd extension is not loaded');
}
if(!function_exists('gd_info')) {
    die('skip gd_info function is not available');
}
?>